<resources>
    <string name="app_name">Bookish\nBookshop</string>
    <string name="txtSlogan">A PLACE THAT\n CAPTIVE YOU</string>
    <string name="txtMarca">Athena Inc.\n ©2021 &#8211; 2022 All rights reserved</string>
    <string name="txtSugerencia">Sugerencias</string>
    <string name="txtCategoria">Categorías</string>
    <string name="txtHistoria">Historia</string>
    <string name="txtGeo">Geografía</string>
    <string name="txtArte">Artes</string>
    <string name="txtFilosofia">Filosofía</string>
    <string name="txtLiteratura">Literatura</string>
    <string name="txtMates">Matemáticas</string>
    <string name="txtReligion">Religión</string>
    <string name="txtPerfil">Mi Perfil</string>
    <string name="txtTarjeta">Mi Tarjeta</string>
    <string name="txtCompra">Mi Compra</string>
    <string name="txtQr">Código QR</string>
    <string name="txtFav">Mis Frases\n Favoritas</string>
    <string name="txtCategorias">Categorías</string>
    <string name="txtDeseos">Lista de deseos</string>
    <string name="txtSesion">Inicia sesión con</string>
    <string name="txtOr">O</string>
    <string name="txtSesion2">Continuar con\n correo electrónico</string>
    <string name="txtRegistarse">¿No tienes una cuenta?</string>
    <string name="txtRegistrarse2"><u>Regístrate aquí</u></string>
    <string name="txtOlvido"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="txtSignIn">Inicia sesión</string>
    <string name="txtSignUp">Crea tu cuenta</string>
    <string name="txtId">Tipo de indentificación</string>
    <string-array name="ID">
        <item>Seleccione</item>
        <item>Cédula</item>
        <item>Pasaporte</item>
    </string-array>
    <string name="txtNombre">Nombres</string>
    <string name="txtCorreo">Correo electrónico</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="txtContrasena2">Confirmar contraseña</string>
    <string name="txtSexo">Sexo</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtEdad">Edad</string>
    <string name="txtEstado">Estado civil</string>
    <string name="txtCelular">Celular</string>
    <string name="txtTerminos">Acepto <u>términos y condiciones</u></string>
    <string name="txtNoticias">Quiero recibir noticias sobre la app</string>
    <string name="txtListo">Listo</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtOmitir">Omitir</string>
    <string name="txtF">Femenino</string>
    <string name="txtM">Masculino</string>
    <string name="txtNA">Prefiero no decirlo</string>
    <string-array name="estadoCivil">
        <item>Seleccione</item>
        <item>Soltero</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>Viudo</item>
    </string-array>
    <string name="txtAnterior">Anterior</string>
    <string name="txtCrear">Crear</string>
    <string name="txtSiguiente">Siguiente</string>
    <string name="txtTipNom">Este nombre aparecerá en tu perfil Bookish.</string>
    <string name="txtTipPswd">Ingrese una contraseña para iniciar sesión.</string>
    <string name="txtExitoCuenta">Cuenta creada\ncorrectamente</string>
    <string name="txtProximo">Próximamente\ndisponible</string>
    <string name="txtN1">1/2</string>
    <string name="txtN2">2/2</string>
    <string name="txtPrefer">Tus Preferencias</string>
    <string name="txtMetod">Método de Pago</string>

    <string name="string1">¿Qué géneros literarios te gustan?</string>
    <string name="string2">Comedia</string>
    <string name="string3">Historia</string>
    <string name="string4">Romance</string>
    <string name="string5">Ciencia Ficción</string>
    <string name="string6">¿Conoces algunos de estos libros?</string>
    <string name="string7">El señor de los anillos</string>
    <string name="string8">IT</string>
    <string name="string9">La chica del tren</string>
    <string name="string10">Antes de ti</string>
    <string name="string11">¿Conoces algunos de estos autores?</string>
    <string name="string12">Stephen King</string>
    <string name="string13">José de la cuadra</string>
    <string name="string14">Pablo Palacios</string>
    <string name="string15">Gonzálo Escudero</string>
    <string name="string18">¿Qué tipo de lectura te gusta?</string>
    <string name="string19">¿Cada que tiempo te gusta leer?</string>
    <string name="string20">¿Cuántos libros has leído en este año?</string>
    <string name="string21">¿Cuánto tiempo le dedicas a la lectura?</string>
    <string name="string22">Metodo de pago</string>
    <string name="string23">Numero de Tarjeta</string>
    <string name="string24">CVV</string>
    <string name="string25">Nombres</string>
    <string name="string26">Fecha de Vencimiento</string>
    <string name="string27">País</string>
    <string name="txtN3">1/1</string>

    <string name="cancelar">Cancelar</string>
    <string name="siguiente">Siguiente</string>
    <string name="txtGuardar">Guardar</string>
    <string name="espacio">                 </string>

    <string-array name="Tipolectura">
        <item>Seleccione</item>
        <item>Virtual</item>
        <item>Fisico</item>
    </string-array>

    <string-array name="Tiempolectura">
        <item>Seleccione</item>
        <item>1 Horas</item>
        <item>2 Horas</item>
        <item>3 Horas</item>
    </string-array>

    <string-array name="TiempoDediclectura">
        <item>Seleccione</item>
        <item>1 Horas</item>
        <item>30 Minutos</item>
        <item>15 Minutos</item>
    </string-array>

    <string-array name="MetodoPago">
        <item>Seleccione</item>
        <item>Tarjeta De Credito</item>
        <item>Efectivo</item>
        <item>BitsCoins</item>
    </string-array>

    <string-array name="PaisMetodoPago">
        <item>Seleccione</item>
        <item>Ecuador</item>
        <item>Peru</item>
        <item>Argentina</item>
    </string-array>
</resources>
