<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Preferencias">

    <ImageView
        android:id="@+id/iv_Logo_Preferences1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtPrefer"
        android:textColor="#ffff"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_Preferences1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="right"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/txtN1"
        android:textColor="#ffff"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_Preferences1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView_Preferences1"
        android:layout_width="match_parent"
        android:layout_height="608dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/borde_scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="444dp">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="808dp"
                android:text="@string/string1"
                android:textColor="#ffff"
                android:textSize="22sp"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string2"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.085" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string3"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.153" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string4"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.221" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string5"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.289" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/string6"
                android:textColor="#ffff"
                android:textSize="24sp"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.355" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string7"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string8"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string9"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.577" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string10"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.645" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/string11"
                android:textColor="#ffff"
                android:textSize="24sp"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.701" />


            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string12"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.763" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string13"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.831" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string14"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.951" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/string15"
                android:textColor="#ffff"
                app:fontFamily="@font/fresca"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.895" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/btnOmitir"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="920dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/continue_correo"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txtOmitir"
                    android:textColor="#ffff"
                    android:textSize="22sp"
                    app:fontFamily="@font/fresca"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/btnSiguiente"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="920dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/continue_correo"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnOmitir"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.142">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txtSiguiente"
                    android:textColor="#ffff"
                    android:textSize="22sp"
                    app:fontFamily="@font/fresca"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>